@@ -44,6 +44,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.withType(JavaCompile) {
@@ -51,6 +53,11 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
     jvmArgs += '--enable-preview'
 }
 
